--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ idna==3.4
 outcome==1.2.0
 PySocks==1.7.1
 requests==2.28.1
-selenium==4.5.0
+lxml==4.9.2
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.0
